--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   "author": "Gordon Dent <gmd@fb.com>",
   "license": "MIT",
   "dependencies": {
-    "prettier": "^1.5.2",
+    "prettier": "^1.5.2"
   }
 }
